src/scss/entry/avatar.scss
@use "../components/itemLists.scss";

span.icon-roseal-hidden-label::after {
    background: purple;
    content: var(--data-roseal-hidden-label-content);
    padding: 3px;
    font-size: 12px;
    margin-left: 2px;
    border-top-right-radius: 5px;
    font-weight: 500;
    position: relative;
    bottom: 1px;

    @media (max-width: 543px) {
        bottom: 4px;
    }

    .light-theme & {
        color: white;
    }
}

.modal-body:has(.bodycolors-list-v2) {
    .hex-color-input-section {
        display: none;
    }
}

.bodycolors-list-v2 {
    margin-bottom: 5px;

    .body-color-input {
        display: flex;
        gap: 3px;
        align-items: center;

        .roseal-color-input {
            transition: all 0.2s ease;
            height: 72px;
            width: 72px;
            border-radius: 100%;
            border-color: transparent;
            cursor: pointer;

            #advanced-body-colors & {
                width: 30px;
                height: 30px;
            }

            &:hover {
                box-shadow: 0 1px 6px 0 rgba(25, 25, 25, 0.75);
            }
        }
    }
    .or-text {
        margin-bottom: 3px;
        text-align: center;
    }

    .bodycolors-list-v2-section {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 5px;
        flex-direction: column;

        .roseal-color-input {
            border-color: revert;
            border-width: 2px;
        }
    }
}

[data-rosealfe-advancedavatarcustomization] {
    .redraw-avatar {
        display: flex;
        align-items: center;

        > a {
            margin-left: auto;
        }

        .text-link:not(.ng-binding):not([style]) {
            display: none;
        }
    }
}
/* ... */

